--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "react": "^17.0.1",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-horizontal-scrolling-menu": "^0.7.10",
