--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.24.0",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
