--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.24.0",
+    "i18next": "^21.6.6",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-horizontal-scrolling-menu": "^0.7.10",
+    "react-i18next": "^11.15.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
