--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-i18next": "^11.15.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-to-print": "^2.14.4",
     "web-vitals": "^1.1.0"
   },
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "6.0.9"
   }
 }
